--- a/LaTex/capitulos/estado_arte.tex
+++ b/LaTex/capitulos/estado_arte.tex
@@ -62,7 +62,7 @@ Desde una perspectiva más empírica, varios estudios han analizado su manifesta
 
 Singh et al. en $2022$~\cite{Singh2022} presentaron un análisis teórico en redes neuronales de tamaño finito, proporcionando una caracterización matemática básica que ayuda a entender los mecanismos subyacentes. Somepalli et al. en $2022$~\cite{Somepalli2022} investigaron la reproducibilidad del aprendizaje en redes neuronales y su relación con el \textit{Deep Double Descent}.
 
-Por otra parte, estudios modernos han abordado este comportamiento desde la perspectiva de los sesgos inductivos en redes neuronales. En $2025$, Andrew Wilson~\cite{Wilson2025} plantea que la generalización puede entenderse intuitivamente y formalizarse mediante marcos teóricos consolidados, introduciendo los \textit{sesgos inductivos suaves} como principio unificador. Esta visión coincide con la de Mingard et al.\ ($2023$)~\cite{Mingard2023}, quienes argumentan que las redes neuronales siguen un principio similar al de la navaja de Ockham.
+Por otra parte, estudios modernos han abordado este comportamiento desde la perspectiva de los sesgos inductivos en redes neuronales. En $2025$, Andrew Wilson~\cite{Wilson2025} plantea que la generalización puede entenderse intuitivamente y formalizarse mediante marcos teóricos consolidados, introduciendo los \textbf{sesgos inductivos suaves} como principio unificador. Esta visión coincide con la de Mingard et al.\ ($2023$)~\cite{Mingard2023}, quienes argumentan que las redes neuronales siguen un principio similar al de la navaja de Ockham.
 
 \begin{figure}[h]
     \centering
