--- a/LaTex/glosario_info.tex
+++ b/LaTex/glosario_info.tex
@@ -5,6 +5,7 @@
 \addcontentsline{toc}{chapter}{Glosario informático} % Añade el glosario a la tabla de contenidos
 
 \begin{description} 
+  \item[DDD] \textit{Deep Double Descent}.
   \item[$\mathcal{X}$] Espacio muestral que contiene todas las entradas posibles para un modelo.
   \item[$\mathcal{Y}$] Conjunto compuesto por todas las posibles salidas del modelo.
   \item[$\mathcal{L}$] Función de pérdida a minimizar por el modelo.
