--- a/LaTex/preliminares/agradecimientos.tex
+++ b/LaTex/preliminares/agradecimientos.tex
@@ -11,7 +11,7 @@
 
 \emph{Extender mi gratitud a la Universidad de Granada por darme la oportunidad de continuar mis estudios en tan prestigiosa institución, cuyo entorno académico y humano ha sido clave en mi desarrollo personal y profesional.}\newline
 
-\emph{Agradecer también a todos los compañeros y amigos que tenido el privilegio de conocer a lo largo de mi formación. En especial, a Julio y Guillermo, por estar a mi lado en los momentos más complicados y por celebrar cada logro de forma conjunta. Nada de esto hubiera sido lo mismo sin vuestra ayuda y compañía.}\newline
+\emph{Agradecer también a todos los compañeros y amigos que he tenido el privilegio de conocer a lo largo de mi formación. En especial, a Julio y Guillermo, por estar a mi lado en los momentos más complicados y por celebrar cada logro de forma conjunta. Nada de esto hubiera sido lo mismo sin vuestra ayuda y compañía.}\newline
 
 \emph{Finalmente, y lo más importante de todo, quiero agradecer a toda mi familia, en especial a mis padres y a mi hermana, por apoyarme de manera incondicional desde la distancia para llegar hasta aquí. Vuestro cariño y respaldo han sido fundamentales durante todo el camino.}\newline
 
