--- a/LaTex/preliminares/introduccion.tex
+++ b/LaTex/preliminares/introduccion.tex
@@ -26,7 +26,7 @@ Aunque cada vez hay más estudios abordando este hecho, muchos de ellos se centr
 \begin{figure}[h]
     \centering
     \includegraphics[width=0.9\textwidth]{img/problem-definition.png}
-    \caption[Ejemplo de doble descenso profundo en ResNet$18$~\cite{Nakkiran2019}.] {Ejemplo de doble descenso en ResNet18~\cite{Nakkiran2019}. La imagen muestra el error de entrenamiento (\textit{train error}, curva discontinua) y de generalización (\textit{test error}, curva continua) para la arquitectura ResNet$18$ con diferente capacidad (número de parámetros). En ella, observamos las tres regiones de actuación del modelo, así como el máximo del error de generalización correspondiente al umbral de interpolación y los dos descensos de dicho error.}\label{fig:ejemplo-definicion-double-descent}
+    \caption[Ejemplo de \textit{Deep Double Descent} en ResNet$18$~\cite{Nakkiran2019}.] {Ejemplo de \textit{Deep Double Descent} en ResNet18~\cite{Nakkiran2019}. La imagen muestra el error de entrenamiento (\textit{train error}, curva discontinua) y de generalización (\textit{test error}, curva continua) para la arquitectura ResNet$18$ con diferente capacidad (número de parámetros). En ella, observamos las tres regiones de actuación del modelo, así como el máximo del error de generalización correspondiente al umbral de interpolación y los dos descensos de dicho error.}\label{fig:ejemplo-definicion-double-descent}
 \end{figure}
 
 El término \textbf{doble descenso profundo} \emph{(Deep Double Descent~\cite{Belkin2019})} describe la forma que toma la curva del error de generalización (error fuera de la muestra, \textit{out-of-sample error}) de un modelo de aprendizaje como función de la capacidad del mismo. De manera intuitiva, podemos distinguir tres zonas o regiones diferenciadas en dicha curva:
