LaTex: minor fixes

--- a/LaTex/capitulos/desarrollo_informatico.tex
+++ b/LaTex/capitulos/desarrollo_informatico.tex
@@ -189,7 +189,7 @@ Todo el código desarrollado, así como los distintos resultados obtenidos, pued
 
 \subsection{Entornos de desarrollo y ejecución}\label{subsec:entornos-desarrollo-ejecucion}
 
-Como preámbulo a los distintos experimentos que se detallan a continuación, se presentan las herramientas utilizadas para su realización. El lenguaje de programación empleado es \textit{Python}, en su versión más reciente ($3.13.3$), debido a su gran facilidad y versatilidad para trabajar con modelos de aprendizaje profundo. Asimismo, se hace uso de las bibliotecas \textit{PyTorch} junto con las necesarias de \textit{CUDA} para el entrenamiento de las diferentes arquitecturas, así como \textit{NumPy} y \textit{Pandas} para el procesamiento de datos, y \textit{Matplotlib} y \textit{Seaborn} para la generación de gráficos.
+Como preámbulo a los distintos experimentos que se detallan a continuación, se presentan las herramientas utilizadas para su realización. El lenguaje de programación empleado es \textit{Python}, en su versión $3.10$, debido a su gran facilidad y versatilidad para trabajar con modelos de aprendizaje profundo. Asimismo, se hace uso de las bibliotecas \textit{PyTorch} junto con las necesarias de \textit{CUDA} para el entrenamiento de las diferentes arquitecturas, así como \textit{NumPy} y \textit{Pandas} para el procesamiento de datos, y \textit{Matplotlib} y \textit{Seaborn} para la generación de gráficos.
 
 Por otro lado, se proporcionan \textit{notebooks} de \textit{Google Colab} con el código asociado a los experimentos que no requieren el uso de redes neuronales y que no demandan grandes recursos. Para los experimentos que requieren el uso de redes neuronales (y que son tan costosos que no se pueden realizar en \textit{notebooks}), se proporciona el código en formato \textit{Python} junto con un script de ayuda para lanzar cualquier experimento realizado. Además, para este caso, se incluye en otro cuaderno el código necesario para visualizar las gráficas correspondientes a los resultados obtenidos por los modelos neuronales, con el propósito de evitar tener que ejecutar ningún proceso adicional para su visualización.
 
