--- a/LaTex/preliminares/introduccion.tex
+++ b/LaTex/preliminares/introduccion.tex
@@ -34,7 +34,7 @@ El término \textbf{doble descenso profundo} \emph{(Deep Double Descent~\cite{Be
 \begin{itemize}
     \item \textbf{Región clásica (infraparametrizada):} En esta región, el modelo no puede capturar toda la complejidad subyacente de la distribución de los datos debido a su baja capacidad. Como resultado, el error de generalización disminuirá inicialmente, ligado al hecho de que el modelo aprende de los datos de entrenamiento. Sin embargo, llegado un momento, el error de generalización aumentará de manera progresiva (véase Figura~\ref{fig:ejemplo-definicion-double-descent}, parte de la figura etiquetada como ``Classical Regime: Bias-Variance Tradeoff'') dando lugar a la clásica curva en forma de ``U'', relacionado con el hecho de que el modelo, en lugar de aprender patrones, memoriza los datos de entrenamiento.
 
-    \item \textbf{Región moderna (sobreparametrizada):} En esta zona, representada en la Figura~\ref{fig:ejemplo-definicion-double-descent} bajo la etiqueta ``Modern Regime: Larger Model is Better'', el modelo tiene una capacidad mayor de la necesaria para ajustar los datos de entrenamiento, es decir, dispone de suficientes herramientas (parámetros) para ajustar cada uno de los datos de entrenamiento. Contrariamente a lo que se esperaría según la sabiduría convencional, el error de generalización no necesariamente aumenta en este región y, bajo ciertas condiciones, dicho error puede reducirse nuevamente, produciendo un nuevo descenso de la curva del error de generalización que se conoce como \emph{doble descenso}.
+    \item \textbf{Región moderna (sobreparametrizada):} En esta zona, representada en la Figura~\ref{fig:ejemplo-definicion-double-descent} bajo la etiqueta ``Modern Regime: Larger Model is Better'', el modelo tiene una capacidad mayor de la necesaria para ajustar los datos de entrenamiento, es decir, dispone de suficientes herramientas (parámetros) para ajustar cada uno de los datos de entrenamiento. Contrariamente a lo que se esperaría según la sabiduría convencional, el error de generalización no necesariamente aumenta en este región y, bajo ciertas condiciones, dicho error puede reducirse nuevamente, produciendo un nuevo descenso de la curva del error de generalización que se conoce como doble descenso.
     
     \item \textbf{Región crítica:} Esta región, indicada en la Figura~\ref{fig:ejemplo-definicion-double-descent} como ``Critical Regime'', marca la transición entre la región infraparametrizada y la región sobreparametrizada y engloba zonas de ambas regiones. Dentro de ella, se encuentra el llamado umbral de interpolación o \textit{interpolation threshold}, que corresponde al punto donde el modelo tiene justo la capacidad suficiente para ajustar de manera prácticamente perfecta los datos de entrenamiento. En este punto crítico, el error de generalización alcanzará su máximo.
        
@@ -48,9 +48,9 @@ En el ámbito del aprendizaje automático, existe una brecha entre el desarrollo
 
 Esta capacidad para obtener resultados que consideramos satisfactorios ha llevado a un enfoque predominantemente práctico, donde los avances se suelen producir de manera más rápida a través del ensayo y error y no tanto a través de modelos matemáticos bien fundamentados, lo que impide comprender, desde una perspectiva teórica, tanto la eficacia como las verdaderas limitaciones de estos modelos. El doble descenso plantea cuestiones sobre la sostenibilidad de este enfoque práctico y la necesidad de desarrollar un marco teórico que permita anticipar y guiar estos avances en lugar de simplemente reaccionar ante ellos.
 
-Aunque existen elogiosos esfuerzos para comprender las bases teóricas del deep learning~\cite{Zhang2021,Mallat2016, Prince2023, Bishop2023, Grohs2022, Balestriero2018, Michael2018}, la desconexión entre avances teóricos y prácticos continúa siendo notable. Por ello, en los últimos años han ido apareciendo discrepancias, y se han observado fenómenos de carácter práctico, que han desafiado el conocimiento teórico tradicional. Es aquí donde se enmarca el concepto de \emph{Deep Double Descent}.
+Aunque existen elogiosos esfuerzos para comprender las bases teóricas del \textit{deep learning}~\cite{Zhang2021,Mallat2016, Prince2023, Bishop2023, Grohs2022, Balestriero2018, Michael2018}, la desconexión entre avances teóricos y prácticos continúa siendo notable. Por ello, en los últimos años han ido apareciendo discrepancias, y se han observado fenómenos de carácter práctico, que han desafiado el conocimiento teórico tradicional. Es aquí donde se enmarca el concepto de \emph{Deep Double Descent}.
 
-De igual manera, este proyecto tiene una relevancia crucial, ya que podría transformar la forma en que se diseñan y optimizan los modelos profundos. Tradicionalmente, el enfoque clásico sugiere que, a medida que se aumenta la complejidad del modelo, este tiende a sobreajustarse a los datos, lo que limita su capacidad de generalización frente a nuevos datos no vistos y motivaba a optar por modelos más simples o incorporar estrategias de regularización. Sin embargo, con la aparición del \textit{Deep Double Descent}, se ha demostrado que, más allá del sobreajuste, los modelos no solo proporcionan mejores predicciones, sino que incluso alcanzan niveles de generalización superiores a los iniciales. Este descubrimiento sugiere que, siguiendo este enfoque, podríamos prescindir de la teoría clásica y centrarnos en desarrollar modelos más complejos. No obstante, las limitaciones computacionales y energéticas siguen representando un desafío en el entrenamiento de grandes modelos de deep learning~\cite{Thompson2022, Cottier2025, Desislavov2023, Strubell2020}. Por ello, en la actualidad, aún se aplican técnicas de regularización para mitigar el sobreajuste y optimizar el uso de recursos.
+De igual manera, este proyecto tiene una relevancia crucial, ya que podría transformar la forma en que se diseñan y optimizan los modelos profundos. Tradicionalmente, el enfoque clásico sugiere que, a medida que se aumenta la complejidad del modelo, este tiende a sobreajustarse a los datos, lo que limita su capacidad de generalización frente a nuevos datos no vistos y motivaba a optar por modelos más simples o incorporar estrategias de regularización. Sin embargo, con la aparición del \textit{Deep Double Descent}, se ha demostrado que, más allá del sobreajuste, los modelos no solo proporcionan mejores predicciones, sino que incluso alcanzan niveles de generalización superiores a los iniciales. Este descubrimiento sugiere que, siguiendo este enfoque, podríamos prescindir de la teoría clásica y centrarnos en desarrollar modelos más complejos. No obstante, las limitaciones computacionales y energéticas siguen representando un desafío en el entrenamiento de grandes modelos de aprendizaje profundo~\cite{Thompson2022, Cottier2025, Desislavov2023, Strubell2020}. Por ello, en la actualidad, aún se aplican técnicas para mitigar el sobreajuste y optimizar el uso de recursos.
 
 En conclusión, el \emph{Deep Double Descent} representa un cambio de paradigma, digno de estudio, en el aprendizaje automático. Comprender los principios subyacentes permitiría avanzar en nuestra comprensión teórica del aprendizaje automático, reduciendo la brecha teórico-práctica, e incluso podría contribuir a guiar el diseño y optimización de modelos prácticos más efectivos.
 
@@ -66,7 +66,7 @@ El objetivo fundamental para la parte matemática consiste en profundizar en la 
 
 \begin{itemize}
     \item Realizar un análisis exhaustivo y detallado del estado del arte, revisando las principales teorías, descubrimientos y avances matemáticos relacionados.
-    \item Presentar de manera detallada las teorías y enfoques tradicionales que, a día de hoy, prevalecen en la literatura de aprendizaje automático.
+    \item Presentar de manera detallada las teorías y enfoques tradicionales que, a día de hoy, prevalecen en la literatura del aprendizaje automático.
     \item Investigar y analizar el \textit{Deep Double Descent}, proporcionando una explicación detallada de sus fundamentos y explorando en profundidad los hallazgos más relevantes de la literatura científica.
     \item Adentrarnos en la teoría de la aproximación no lineal con el propósito de identificar y analizar posibles analogías, explorando cómo los enfoques no lineales pueden ofrecer una comprensión más profunda y enriquecedora del fenómeno.
 \end{itemize}
@@ -135,7 +135,7 @@ Además, de manera paralela a las etapas descritas anteriormente, se lleva a cab
         Implementación & $2 - 60$ & & & & & & & & & & \Block[fill={gray!50}]{1-2} \\
         \\ 
         \hline
-        Pruebas & $9 - 270$ & & & & & & & & & & & & \Block[fill={gray!50}]{1-9} \\
+        Pruebas & $7 - 210$ & & & & & & & & & & & & \Block[fill={gray!50}]{1-7} \\
         \\ 
         \hline
         Documentación & -- & & & & & \Block[fill={gray!50}]{1-16} \\
@@ -173,7 +173,7 @@ Además, de manera paralela a las etapas descritas anteriormente, se lleva a cab
         Implementación & $2 - 60$ & & & & & & & & & & \Block[fill={gray!50}]{1-2} \\
         \\ 
         \hline
-        Pruebas & $9 - 270$ & & & & & & & & & & & & \Block[fill={gray!50}]{1-9} \\
+        Pruebas & $7 - 210$ & & & & & & & & & & & & \Block[fill={gray!50}]{1-7} \\
         \\ 
         \hline
         Documentación & -- & & & & & \Block[fill={gray!50}]{1-16} \\
@@ -194,7 +194,7 @@ La planificación inicial del proyecto se detalla en la Tabla~\ref{tabla:gantt-i
     \caption{Resumen de las fechas de inicio y fin del proyecto, junto con la duración total.}\label{tabla:resumen-duracion}
 \end{table}
 
-Para la estimación del coste, partimos de la base de que el coste por hora de un investigador senior o responsable de I$+$D en una empresa tecnológica española es de $15$\euro/hora, según el portal de transparencia empresarial Glassdoor\footnote{Se asume un salario anual de $30000$\euro\ según estimaciones publicadas en: \url{https://www.glassdoor.es/Sueldos/ingeniero-de-investigacion-y-desarrollo-sueldo-SRCH_KO0,39.htm}}, y de una duración final del proyecto de $690$ horas. A esta cifra se deben sumar los gastos derivados de los distintos materiales utilizados, tales como el coste del portátil empleado en el desarrollo del TFG y el uso de un servidor GPU de altas prestaciones, junto a otros gastos misceláneos entre los que se incluye el consumo eléctrico. El desglose detallado de estos costes se puede consultar en la Tabla~\ref{tabla:estimacion-coste}.
+Para la estimación del coste, partimos de la base de que el coste por hora de un investigador senior o responsable de I$+$D en una empresa tecnológica española es de $15$\euro/hora, según el portal de transparencia empresarial Glassdoor\footnote{Se asume un salario anual de $30000$\euro\ según estimaciones publicadas en: \url{https://www.glassdoor.es/Sueldos/ingeniero-de-investigacion-y-desarrollo-sueldo-SRCH_KO0,39.htm}}, y de una duración final del proyecto de $630$ horas. A esta cifra se deben sumar los gastos derivados de los distintos materiales utilizados, tales como el coste del portátil empleado en el desarrollo del TFG y el uso de un servidor GPU de altas prestaciones, junto a otros gastos misceláneos entre los que se incluye el consumo eléctrico. El desglose detallado de estos costes se puede consultar en la Tabla~\ref{tabla:estimacion-coste}.
 
 Respecto al servidor GPU, y basándonos en sus especificaciones, se estima su valoración en $12000$\euro. Se asume una amortización proyectada a lo largo de dos años, lo que equivale a un coste diario de $16.44$\euro. Por ende, la contribución total de este servidor al coste del proyecto sería de $2186.52$\euro.
 
@@ -204,7 +204,7 @@ Respecto al servidor GPU, y basándonos en sus especificaciones, se estima su va
         \hline
         \cellcolor{cyan!50} \hspace{6em} \textbf{Item} & \cellcolor{cyan!50} \hspace{4.5em} \textbf{Costo} \\ 
         \hline
-        Salario & 10 350.00\euro \\
+        Salario & 9 450.00\euro \\
         \hline
         Portátil de Gama Media & 1 000.00\euro \\
         \hline
@@ -212,7 +212,7 @@ Respecto al servidor GPU, y basándonos en sus especificaciones, se estima su va
         \hline
         Otros & 300.00\euro \\
         \hline
-        \cellcolor{cyan!50} \hspace{12em} \textbf{Total} & 13 836.52\euro\\
+        \cellcolor{cyan!50} \hspace{12em} \textbf{Total} & 12 936.52\euro\\
         \hline
     \end{tabular}
     \caption{Estimación del coste del proyecto.}\label{tabla:estimacion-coste}
