--- a/LaTex/capitulos/fundamentos_matematicos.tex
+++ b/LaTex/capitulos/fundamentos_matematicos.tex
@@ -80,7 +80,7 @@ Las variables aleatorias son funciones numéricas que asignan un valor numérico
     Dado un espacio de probabilidad ($\Omega_1, \mathcal{A}, \mathrm{P}$) y un espacio medible ($\Omega_2, \mathcal{B}$), decimos que $X: (\Omega_1, \mathcal{A}, \mathrm{P}) \to (\Omega_2, \mathcal{B})$ es una \emph{variable aleatoria} si $X$ es una función medible.
 \end{definicion}
 
-Además, si el espacio medible de llegada es $n$-dimensional, entonces la variable aleatoria $X$ es llamada \textbf{vector aleatorio} y lo denotaremos por $X = (X_1, X_2, \ldots, X_n)$, donde cada componente $X_i$ con $i \in \{1, 2, \ldots, n\}$ es una variable aleatoria.
+Además, si el espacio medible de llegada es $n$-dimensional, entonces la variable aleatoria $X$ es llamada \textbf{vector aleatorio} y lo denotaremos por $X = (X_1, X_2, \ldots, X_n)$, donde cada componente $X_i$, con $i \in \{1, 2, \ldots, n\}$, es una variable aleatoria.
 
 \begin{observacion}
     En la mayoría de usos prácticos se tiene que el espacio medible de llegada más común es ($\mathbb{R}, \mathcal{B}(\mathbb{R})$), donde $\mathcal{B}(\mathbb{R})$ denota la $\sigma$-álgebra de Borel en $\mathbb{R}$.
@@ -292,7 +292,7 @@ donde los distintos índices ($i, j, \ldots, k$) recorren todos los posibles res
 
 De manera análoga a la definición anterior y dado que estamos trabajando con distribuciones de probabilidad, se verifica que 
 
-\[ \int_{-\infty}^{x_1} \cdots \int_{-\infty}^{x_n} f_{X_{1}, \ldots, X_n} (x_1, \ldots, x_n) \, dx_1, \ldots,  dx_n = 1. \]
+\[ \int_{-\infty}^{x_1} \cdots \int_{-\infty}^{x_n} f_{X_{1}, \ldots, X_n} (x_1, \ldots, x_n) \, dx_1 \cdots dx_n = 1. \]
 
 
 Una vez conocemos las funciones conjuntas de una serie de variables aleatorias, es posible determinar la probabilidad de un suceso sin considerar la influencia de otras variables por medio de las funciones marginales.
@@ -300,7 +300,7 @@ Una vez conocemos las funciones conjuntas de una serie de variables aleatorias, 
 \begin{definicion}[Función de distribución marginal]
     Sean $X_1, \ldots, X_n$ variables aleatorias. Se define la \emph{función de probabilidad marginal} de la variable aleatoria $X_i$, para $i \in \{1, \ldots, n\}$, de la siguiente manera:
 
-    \[ \forall i = 1,\ldots,n,  \qquad F_{X_i}(x_i) = F_{X_{1}, \ldots, X_{n}}(+\infty, \ldots,x_i, \ldots,+\infty), \quad \forall x_i \in \mathbb{R}. \]
+    \[ \forall i = \{1,\ldots,n\},  \qquad F_{X_i}(x_i) = F_{X_{1}, \ldots, X_{n}}(+\infty, \ldots,x_i, \ldots,+\infty), \quad \forall x_i \in \mathbb{R}. \]
 \end{definicion}
 
 \begin{definicion}[Función de probabilidad marginal]
@@ -312,7 +312,7 @@ Una vez conocemos las funciones conjuntas de una serie de variables aleatorias, 
 \begin{definicion}[Función de densidad marginal]
     Sean $X_1, \ldots, X_n$ variables aleatorias continuas. Se define la \emph{función de densidad marginal} de la variable aleatoria $X_i$, para $i \in \{1, \ldots, n\}$, como sigue:
 
-    \[ f_{X_i}(x_i) = \int_{-\infty}^{x_1} \cdots \int_{-\infty}^{x_n} f_{X_{1}, \ldots, X_n} (x_1, \ldots, x_n) \, dx_1, \ldots, dx_{i-1},dx_{i+1}, \ldots,  dx_n, \! \! \quad \forall x_i \in \mathbb{R}. \]
+    \[ f_{X_i}(x_i) = \int_{-\infty}^{x_1} \cdots \int_{-\infty}^{x_n} f_{X_{1}, \ldots, X_n} (x_1, \ldots, x_n) \, dx_1 \cdots dx_{i-1} dx_{i+1} \cdots  dx_n, \quad \forall x_i \in \mathbb{R}. \]
 \end{definicion}
 
 \begin{definicion}\label{def:variables-aleatorias-idénticamente-distribuidas}
@@ -440,7 +440,7 @@ Las distribuciones de probabilidad son funciones que describen el comportamiento
     La \textit{moda} de una distribución de probabilidad se refiere al dato (o datos) que más se repite en un conjunto de observaciones. En otras palabras, corresponde al valor (o valores) donde la función de probabilidad alcanza su máximo, o la función masa de probabilidad tiene la mayor frecuencia.
 \end{definicion}
 
-A su vez, diremos que una distribución es \textit{unimodal} si posee un único valor de moda, \textit{bimodal} si tiene dos, y \textit{multimodal} si presenta varios (véase Figura~\ref{fig:unimodal-multimodal}).
+A su vez, diremos que una distribución es \textbf{unimodal} si posee un único valor de moda, \textbf{bimodal} si tiene dos, y \textbf{multimodal} si presenta varios (véase Figura~\ref{fig:unimodal-multimodal}).
 
 \begin{figure}[h]
     \centering
@@ -487,7 +487,7 @@ La distribución normal, o distribución de Gauss, es la distribución de probab
 Como consecuencia de la primera propiedad de la proposición anterior, se pueden relacionar todas las variables aleatorias normales con la distribución $\mathcal{N}(0,1)$.
 
 \begin{proposicion}
-    Sea $X \sim \mathcal{N}(\mu,\sigma^2)$. Entonces
+    Sea $X \sim \mathcal{N}(\mu,\sigma^2)$. Entonces,
     
     \[ Z = \frac{X-\mu}{\sigma} \]
 
@@ -552,7 +552,7 @@ También se recuerdan los conceptos de norma y ortonormalidad de vectores, que s
 Denotaremos por $\mathcal{M}_{m \times n}(\mathbb{R})$ al espacio vectorial de las matrices de orden $m$ por $n$ con entradas en $\mathbb{R}$. A la matriz cuyas entradas son todas iguales a cero la llamaremos matriz cero y la denotaremos por $O$. Además, podemos formar una matriz a partir de vectores columna, utilizando la notación $V = [v_1, v_2, \ldots, v_n]$, donde $\{v_1, v_2, \ldots, v_n\}$ son los vectores columna que componen la matriz V.
 
 \begin{definicion}
-    La matriz \textbf{traspuesta} $A^{T}$ de una matriz $A \in \mathcal{M}_{m \times n}(\mathcal{R})$ es la matriz de tamaño $n \times m$ que se obtiene de la matriz $A$ al intercambiar las filas por las columnas, es decir, $(a^{T})_{ij} = a_{ji}$. Decimos que una matriz cuadrada $A$ es \textbf{simétrica} si cumple $A^{T} = A$ y decimos que es \textbf{ortogonal} si sus columnas están formadas por vectores ortonormales dos a dos.
+    La matriz \textbf{traspuesta} $A^{T}$ de una matriz $A \in \mathcal{M}_{m \times n}(\mathcal{R})$ es la matriz de tamaño $n \times m$ que se obtiene de la matriz $A$ al intercambiar las filas por las columnas, es decir, $(a^{T})_{ij} = a_{ji}$. Decimos que una matriz cuadrada $A$ es \textbf{simétrica} si cumple $A^{T} = A$ y, decimos que es \textbf{ortogonal} si sus columnas están formadas por vectores ortonormales dos a dos.
 \end{definicion}
 
 Denotamos la \textbf{delta de Kronecker} $\delta_{ij}$ como la función dada por
@@ -590,7 +590,7 @@ De esta manera, la \textbf{matriz identidad} de tamaño $n \times n$ ($I_{n}$) v
 \end{definicion}
 
 \begin{definicion}
-    Una matriz $A$ de tamaño $m \times n$ es \textbf{escalonada reducida} si es escalonada y además todo elemento en una columna que esté encima del primer uno de cualquier fila es cero.
+    Una matriz $A$ de tamaño $m \times n$ es \textbf{escalonada reducida} si es escalonada y, además, todo elemento en una columna que esté encima del primer uno de cualquier fila es cero.
 \end{definicion}
 
 \begin{ejemplo}
@@ -687,14 +687,14 @@ El siguiente resultado nos indica que toda matriz, independientemente de su estr
     dado que los vectores propios $v_i$ son ortogonales. Recordamos ahora que los valores singulares satisfacen $\sigma_i = ||Av_i||$ y que los primeros $r$ valores singulares son distintos de cero. Por tanto, podemos normalizar $Av_1, \ldots, Av_r$ de la siguiente forma:
 
     \begin{equation}
-        u_i = \frac{1}{\sigma_i} A v_i \quad \text{para } i = 1, \ldots, r.
+        u_i = \frac{1}{\sigma_i} A v_i, \quad \text{para } i = \{1, \ldots, r\}.
         \label{eq:singulares1}
     \end{equation}
     
 
     Esto garantiza que $\{ u_1, \ldots, u_r\}$ es un conjunto ortonormal de $\mathbb{R}^{m}$, pero si $r < m$ no será una base para $\mathbb{R}^{m}$. En este caso, se extiende el conjunto $\{u_1, \ldots, u_r \}$ a una base ortonormal $\{u_1, \ldots, u_m \}$ para $\mathbb{R}^{m}$. En consecuencia, la matriz $U$ es ortogonal. Ahora, falta comprobar que, con la construcción realizada, se satisface el resultado $A = U \Sigma V^{T}$. Dado que $V^{T} = V^{-1}$ (al ser la matriz $V$ ortogonal), esto equivale a demostrar que $AV = U\Sigma$.
 
-    En primer lugar, sabemos, a partir de la ecuación~\eqref{eq:singulares1}, que $Av_i=\sigma_i u_i$ para $i=1, \ldots, r$ y que $||A v_i|| = \sigma_i = 0$ para $i=r+1, \ldots,n$. En consecuencia, $Av_i = 0$ para $i=r+1, \ldots,n$. Por tanto, 
+    En primer lugar, sabemos, a partir de la ecuación~\eqref{eq:singulares1}, que $Av_i=\sigma_i u_i$ para $i=\{1, \ldots, r\}$ y que $||A v_i|| = \sigma_i = 0$ para $i=\{r+1, \ldots,n\}$. En consecuencia, $Av_i = 0$ para $i=\{r+1, \ldots,n\}$. Por tanto,
 
     \begin{align*}
         A V &= A \begin{bmatrix} \mathbf{v}_1 & \cdots & \mathbf{v}_n \end{bmatrix} \\
@@ -716,7 +716,7 @@ El siguiente resultado nos indica que toda matriz, independientemente de su estr
 
 El siguiente resultado generaliza el concepto de matriz inversa cuando la matriz no es cuadrada.
 \begin{definicion}[Pseudoinversa]
-    Sea $A \in \mathcal{M}_{m \times n}(\mathbb{R})$ con $m > n$ y cuyas columnas son linealmente independientes. Se define la \textbf{pseudoinversa} \emph{(o inversa de Moore-Penrose)} de la matriz $A$ como la matriz $A^{\dagger}$ dada por
+    Sea $A \in \mathcal{M}_{m \times n}(\mathbb{R})$ con $m > n$ y cuyas columnas son linealmente independientes. Se define la \textbf{pseudoinversa} (o inversa de Moore-Penrose) de la matriz $A$ como la matriz $A^{\dagger}$ dada por
 
     \[ A^{\dagger} = {(A^{T}A)}^{-1}A^{T}, \]
 
