LaTex: refine core fundamentals

--- a/LaTex/glosario_info.tex
+++ b/LaTex/glosario_info.tex
@@ -10,7 +10,7 @@
   \item[$\mathcal{Y}$] Conjunto compuesto por todas las posibles salidas del modelo.
   \item[$\mathcal{L}$] Función de pérdida a minimizar por el modelo.
   \item[$\mathcal{D}$] Conjunto de datos de entrenamiento.
-  \item[$\mathcal{H}$] Conjunto de hipótesis de un modelo formado por las hipótesis candidatas y la función objetivo.
+  \item[$\mathcal{H}$] Conjunto de hipótesis formado por las hipótesis candidatas y la función objetivo.
   \item[$\mathcal{A}$] Algoritmo de aprendizaje. 
   \item[$f$] Función objetivo. 
   \item[$\bar{g}$] Hipótesis ideal.
@@ -20,6 +20,7 @@
   \item[$\eta$] Tasa de aprendizaje o \textit{learning rate}.
   \item[$E_{out}$] Error fuera de la muestra o error de generalización. 
   \item[$E_{in}$] Error dentro de la muestra o error de entrenamiento.
+  \item[Sweet spot] Mínimo del error de generalización según la sabiduría clásica.
   \item[$d_{vc}$] Dimensión de Vapnik-Chervonenkis.
   \item[$\mathcal{R}(\mathcal{K})$] Complejidad de Rademacher del conjunto $\mathcal{K}$.
   \item[Complejidad efectiva del modelo (EMC)] Máximo número de ejemplos de entrenamiento en el que el modelo obtiene un $E_{in}$ próximo a cero.
